Refactor gear ratio naming to gear calculator and update structure

--- a/velowrench.UI/Resources/Languages.en-US.resx
+++ b/velowrench.UI/Resources/Languages.en-US.resx
@@ -123,8 +123,8 @@
   <data name="ChainlineCalculator" xml:space="preserve">
     <value>Chainline Calculator</value>
   </data>
-  <data name="GearRatioCalculator" xml:space="preserve">
-    <value>Gear Ratio Calculator</value>
+  <data name="GearCalculator" xml:space="preserve">
+    <value>Gear Calculator</value>
   </data>
   <data name="RolloutCalculator" xml:space="preserve">
     <value>Rollout Calculator</value>
