add copy to clipboard feature for calculation results

--- a/velowrench.UI/Resources/Languages.resx
+++ b/velowrench.UI/Resources/Languages.resx
@@ -198,6 +198,9 @@
   <data name="ComponentCompatibilityGuide" xml:space="preserve">
     <value>Component Compatibility Guide</value>
   </data>
+  <data name="CopyResultsLabel" xml:space="preserve">
+    <value>Copy results</value>
+  </data>
   <data name="CrankLength" xml:space="preserve">
     <value>Crank length</value>
   </data>
