add input summary below calculation results

--- a/velowrench.UI/Resources/Languages.en-US.resx
+++ b/velowrench.UI/Resources/Languages.en-US.resx
@@ -199,7 +199,7 @@
     <value>Component Compatibility Guide</value>
   </data>
   <data name="CopyResultsLabel" xml:space="preserve">
-    <value>Copy to clipboard</value>
+    <value>Copy results</value>
   </data>
   <data name="CrankLength" xml:space="preserve">
     <value>Crank length</value>
