--- a/velowrench.UI/Resources/Languages.resx
+++ b/velowrench.UI/Resources/Languages.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="About" xml:space="preserve">
+    <value>About</value>
+  </data>
   <data name="Appearance" xml:space="preserve">
     <value>Appearance</value>
   </data>
@@ -207,6 +210,15 @@
   <data name="CrankLengthFormula" xml:space="preserve">
     <value>= crank length</value>
   </data>
+  <data name="Credit" xml:space="preserve">
+    <value>Credit</value>
+  </data>
+  <data name="CreditDescription" xml:space="preserve">
+    <value>This app uses calculations and observations published by the legendary bicycle mechanic and cycling guru: Sheldon Brown</value>
+  </data>
+  <data name="CreditKnowledgeBase" xml:space="preserve">
+    <value>You will find a huge knowledge base on his website for an in-depth understanding of all aspects of bicycle mechanics:</value>
+  </data>
   <data name="CrossCount" xml:space="preserve">
     <value>= Cross count</value>
   </data>
@@ -224,6 +236,12 @@
   </data>
   <data name="DevelopmentFormula" xml:space="preserve">
     <value>= development</value>
+  </data>
+  <data name="Disclaimer" xml:space="preserve">
+    <value>Disclaimer</value>
+  </data>
+  <data name="DisclaimerText" xml:space="preserve">
+    <value>veloWrench cannot be held responsible for the use of this online calculator, the data entered, the results obtained by any party using this tool, or the decisions made based on these results.</value>
   </data>
   <data name="Display" xml:space="preserve">
     <value>Display</value>
@@ -332,6 +350,9 @@
   </data>
   <data name="HubSpokeHoleDiameter" xml:space="preserve">
     <value>= Hub spoke hole diameter (fixed at 2.5mm)</value>
+  </data>
+  <data name="Info" xml:space="preserve">
+    <value>Info</value>
   </data>
   <data name="Inputs" xml:space="preserve">
     <value>Inputs</value>
@@ -467,6 +488,9 @@
   </data>
   <data name="VeloWrench" xml:space="preserve">
     <value>veloWrench</value>
+  </data>
+  <data name="Version" xml:space="preserve">
+    <value>Version</value>
   </data>
   <data name="WheelCircumferenceFormula" xml:space="preserve">
     <value>= wheel circumference</value>
